tests/script_errors/pp_cyclic/error.txt
Error:
      | ^ Too many open files (os error 24)
